--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -14,7 +14,7 @@
     /* border: 3px solid rgb(255, 255, 255); */
     
     /* margin: 20px; */
-    z-index: 12;
+    z-index: 25;
     /* border-radius: 10px; */
 
     top: 0;       /* Align to the top */
